--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  padding: 10px;
   background-image: url("images/background.png");
   background-repeat: repeat;
   animation: slide 10s linear infinite;
