--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body {
   animation: slide 10s linear infinite;
   animation-duration: 10s;
   transition-delay: 0s;
+  font-family: monospace, monospace;
+  width:1000px;
+  margin-left:auto;
+  margin-right:auto;
+  margin:0 auto;
+  background-color: #0e071b;
+  color: #0e071b;
 }
 
 @keyframes slide {
@@ -26,7 +33,7 @@ body {
   background-color: #ffffff;
   border-style: solid;
   border-color:#0e071b;
-  border-radius: 10px;
+  border-radius: 25px;
 }
 
 .float{
